--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
     body { font-family: Arial; padding: 20px; }
     button { margin: 5px; }
     table, th, td { border: 1px solid black; border-collapse: collapse; padding: 5px; }
+    #alerta { color: red; font-weight: bold; }
   </style>
 </head>
 <body>
   <h2>📍 Localização Rodoviária</h2>
 
   <input type="file" id="csvFile" accept=".csv" />
-  <button onclick="getLocation()">Obter Localização Atual</button>
+  <button onclick="iniciarLocalizacao()">Obter Localização Atual</button>
   <button onclick="savePoint('A')">Salvar Localização A</button>
   <button onclick="savePoint('B')">Salvar Localização B</button>
   <button onclick="calculateAB()">Calcular Distância A↔B</button>
   <button onclick="exportHistory()">Exportar Histórico</button>
 
+  <p>Latitude: <span id="lat">--</span></p>
+  <p>Longitude: <span id="lon">--</span></p>
+  <p>Precisão: <span id="precisao">--</span></p>
+  <p id="alerta"></p>
   <p id="output"></p>
+
   <table id="historyTable">
     <tr><th>Data</th><th>Lat</th><th>Lon</th><th>Rodovia</th><th>Km</th><th>Sentido</th><th>Distância</th><th>A↔B</th></tr>
   </table>
@@ -44,18 +50,42 @@
       reader.readAsText(this.files[0]);
     });
 
-    function getLocation() {
-      navigator.geolocation.getCurrentPosition(pos => {
-        const lat = pos.coords.latitude;
-        const lon = pos.coords.longitude;
-        const nearest = findNearest(lat, lon);
-        const dist = haversine(lat, lon, nearest.lat, nearest.lon);
-        const now = new Date().toLocaleString();
-        history.push({ date: now, lat, lon, ...nearest, dist: dist.toFixed(1), ab: "" });
-        updateTable();
-        document.getElementById("output").innerText =
-          `Mais próximo: ${nearest.rodovia}, km ${nearest.km} ${nearest.sentido} (${dist.toFixed(1)} m)`;
-      });
+    function iniciarLocalizacao() {
+      if ("geolocation" in navigator) {
+        navigator.geolocation.watchPosition(pos => {
+          const lat = pos.coords.latitude;
+          const lon = pos.coords.longitude;
+          const accuracy = pos.coords.accuracy;
+
+          document.getElementById("lat").textContent = lat.toFixed(6);
+          document.getElementById("lon").textContent = lon.toFixed(6);
+          document.getElementById("precisao").textContent = accuracy + " metros";
+
+          if (accuracy > 100) {
+            document.getElementById("alerta").textContent = "⚠️ GPS impreciso. Aguarde melhor sinal.";
+          } else {
+            document.getElementById("alerta").textContent = "";
+          }
+
+          const nearest = findNearest(lat, lon);
+          const dist = haversine(lat, lon, nearest.lat, nearest.lon);
+          const now = new Date().toLocaleString();
+          history.push({ date: now, lat, lon, ...nearest, dist: dist.toFixed(1), ab: "" });
+          updateTable();
+          document.getElementById("output").innerText =
+            `Mais próximo: ${nearest.rodovia}, km ${nearest.km} ${nearest.sentido} (${dist.toFixed(1)} m)`;
+        },
+        error => {
+          alert("Erro ao obter localização: " + error.message);
+        },
+        {
+          enableHighAccuracy: true,
+          timeout: 10000,
+          maximumAge: 0
+        });
+      } else {
+        alert("Geolocalização não é suportada neste navegador.");
+      }
     }
 
     function findNearest(lat, lon) {
@@ -80,12 +110,16 @@
     }
 
     function savePoint(label) {
-      navigator.geolocation.getCurrentPosition(pos => {
-        const coord = { lat: pos.coords.latitude, lon: pos.coords.longitude };
-        if (label === 'A') pointA = coord;
-        else pointB = coord;
-        alert(`Localização ${label} salva.`);
-      });
+      const lat = parseFloat(document.getElementById("lat").textContent);
+      const lon = parseFloat(document.getElementById("lon").textContent);
+      if (isNaN(lat) || isNaN(lon)) {
+        alert("Localização não disponível.");
+        return;
+      }
+      const coord = { lat, lon };
+      if (label === 'A') pointA = coord;
+      else pointB = coord;
+      alert(`Localização ${label} salva.`);
     }
 
     function calculateAB() {
