--- a/index.html
+++ b/index.html
@@ -34,22 +34,28 @@
       points = [];
 
       for (let i = 1; i < lines.length; i++) {
-        const sep = lines[i].includes(";") ? ";" : ",";
-        const cols = lines[i].split(sep);
-        if (cols.length >= 6) {
-          let lat = cols[3].replace(",", ".").trim();
-          let lon = cols[4].replace(",", ".").trim();
-          let dist = cols[5].replace(",", ".").trim();
+        const line = lines[i].trim();
+        if (!line) continue;
 
-          points.push({
-            rodovia: cols[0].trim(),
-            km: cols[1].trim(),
-            sentido: cols[2].trim(),
-            lat: parseFloat(lat),
-            lon: parseFloat(lon),
-            distancia: parseFloat(dist)
-          });
-        }
+        const sep = line.includes(";") ? ";" : ",";
+        const cols = line.split(sep);
+
+        if (cols.length < 6) continue;
+
+        const lat = parseFloat(cols[3].replace(",", ".").replace(/"/g, ""));
+        const lon = parseFloat(cols[4].replace(",", ".").replace(/"/g, ""));
+        const dist = parseFloat(cols[5].replace(",", ".").replace(/"/g, ""));
+
+        if (isNaN(lat) || isNaN(lon) || isNaN(dist)) continue;
+
+        points.push({
+          rodovia: cols[0].replace(/"/g, "").trim(),
+          km: cols[1].replace(/"/g, "").trim(),
+          sentido: cols[2].replace(/"/g, "").trim(),
+          lat,
+          lon,
+          distancia: dist
+        });
       }
 
       alert("Planilha carregada com " + points.length + " pontos.");
