--- a/index.html
+++ b/index.html
@@ -40,21 +40,19 @@
         const sep = line.includes(";") ? ";" : ",";
         const cols = line.split(sep);
 
-        if (cols.length < 6) continue;
+        if (cols.length < 5) continue;
 
         const lat = parseFloat(cols[3].replace(",", ".").replace(/"/g, ""));
         const lon = parseFloat(cols[4].replace(",", ".").replace(/"/g, ""));
-        const dist = parseFloat(cols[5].replace(",", ".").replace(/"/g, ""));
 
-        if (isNaN(lat) || isNaN(lon) || isNaN(dist)) continue;
+        if (isNaN(lat) || isNaN(lon)) continue;
 
         points.push({
           rodovia: cols[0].replace(/"/g, "").trim(),
           km: cols[1].replace(/"/g, "").trim(),
           sentido: cols[2].replace(/"/g, "").trim(),
           lat,
-          lon,
-          distancia: dist
+          lon
         });
       }
 
@@ -77,15 +75,15 @@
       document.getElementById("mapaBtn").style.display = "none";
 
       navigator.geolocation.getCurrentPosition(pos => {
-        const lat = pos.coords.latitude;
-        const lon = pos.coords.longitude;
+        const lat1 = pos.coords.latitude;
+        const lon1 = pos.coords.longitude;
         const accuracy = pos.coords.accuracy;
 
-        ultimaLat = lat;
-        ultimaLon = lon;
+        ultimaLat = lat1;
+        ultimaLon = lon1;
 
-        document.getElementById("lat").textContent = lat.toFixed(6);
-        document.getElementById("lon").textContent = lon.toFixed(6);
+        document.getElementById("lat").textContent = lat1.toFixed(6);
+        document.getElementById("lon").textContent = lon1.toFixed(6);
         document.getElementById("precisao").textContent = accuracy + " metros";
 
         if (accuracy > 300) {
@@ -98,10 +96,19 @@
         }
 
         setTimeout(() => {
-          const sorted = points.slice().sort((a, b) => a.distancia - b.distancia);
-          const nearest = sorted[0];
-          const dist = nearest.distancia;
+          let minDist = Infinity;
+          let nearest = null;
 
+          points.forEach(p => {
+            const dist = calcularDistanciaMacro(lat1, lon1, p.lat, p.lon);
+            if (dist < minDist) {
+              minDist = dist;
+              nearest = p;
+              nearest.distancia = dist;
+            }
+          });
+
+          const dist = nearest.distancia;
           let mensagem = `Mais próximo: ${nearest.rodovia}, km ${nearest.km} ${nearest.sentido} (${dist.toFixed(1)} m)`;
           if (dist > 500) {
             mensagem += "\nPossivelmente fora da faixa de domínio da concessionária";
@@ -126,6 +133,20 @@
         const url = `https://www.google.com/maps?q=${ultimaLat},${ultimaLon}`;
         window.open(url, "_blank");
       }
+    }
+
+    function calcularDistanciaMacro(lat1, lon1, lat2, lon2) {
+      const toRad = deg => deg * Math.PI / 180;
+      const R = 6371; // km
+
+      const lat1r = toRad(90 - lat1);
+      const lat2r = toRad(90 - lat2);
+      const lonDiff = toRad(lon1 - lon2);
+
+      const cosDist = Math.cos(lat1r) * Math.cos(lat2r) + Math.sin(lat1r) * Math.sin(lat2r) * Math.cos(lonDiff);
+      const dist = R * Math.acos(cosDist) * 1000; // metros
+
+      return dist;
     }
   </script>
 </body>
