--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
   <title>Localização Rodoviária</title>
   <style>
     body { font-family: Arial; padding: 20px; }
-    button { margin: 5px; }
+    button, label { margin: 5px; }
     #alerta { color: red; font-weight: bold; }
     #output { white-space: pre-line; font-weight: bold; }
     #mapaBtn, #pontoBtn { display: none; margin-top: 10px; }
+    label[for="csvFile"] {
+      background: #0078D4;
+      color: white;
+      padding: 6px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      display: inline-block;
+    }
   </style>
 </head>
 <body>
   <h2>📍 Localização Rodoviária</h2>
 
-  <input type="file" id="csvFile" accept=".csv" />
+  <label for="csvFile">Carregar Cadastro Rodovia</label>
+  <input type="file" id="csvFile" accept=".csv" style="display:none;" />
   <button onclick="iniciarLocalizacao()">Obter Localização Atual</button>
 
   <br><br>
@@ -208,6 +217,6 @@
 
       return dist;
     }
-  </script>
+ </script>
 </body>
 </html>
