--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div style="text-align: center; margin-bottom: 20px;">
-    <img src="https://1drv.ms/i/c/95bcda928b9468c4/EWduuKgeUyhImG0gfZ34gYUBF7louCZ4TvRc_z9A0i5eVA?e=L6gM7f" alt="Logo da Empresa" style="height: 100px;" />
+    <img src="logo.jpg" alt="Logo da Empresa" style="height: 100px;" />
   </div>
 
   <h2>📍 Localização Rodoviária</h2>
@@ -207,7 +207,30 @@
         window.open(url, "_blank");
       }
     }
+
+    function calcularDistanciaMacro(lat1, lon1, lat2, lon2) {
+      const toRad = deg => deg * Math.PI / 180;
+      const R = 6371; // km
+
+      const lat1r = toRad(90 - lat1);
+      const lat2r = toRad(90 - lat2);
+      const lonDiff = toRad(lon1 - lon2);
+
+      const cosDist = Math.cos(lat1r) * Math.cos(lat2r) + Math.sin(lat1r) * Math.sin(lat2r) * Math.cos(lonDiff);
+      const dist = R * Math.acos(cosDist
+                                 function calcularDistanciaMacro(lat1, lon1, lat2, lon2) {
+  const toRad = deg => deg * Math.PI / 180;
+  const R = 6371; // km
+
+  const lat1r = toRad(90 - lat1);
+  const lat2r = toRad(90 - lat2);
+  const lonDiff = toRad(lon1 - lon2);
+
+  const cosDist = Math.cos(lat1r) * Math.cos(lat2r) + Math.sin(lat1r) * Math.sin(lat2r) * Math.cos(lonDiff);
+  const dist = R * Math.acos(cosDist) * 1000; // metros
+
+  return dist;
+}
 </script>
 </body>
 </html>
-   
