--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Localização Rodoviária</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Localização Rodoviária</title>
   <style>
     body { font-family: Arial; padding: 20px; }
     button, label { margin: 5px; }
@@ -224,4 +225,5 @@
   </script>
 </body>
 </html>
+
 
