--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Localização Rodoviária</title>
   <style>
     body { font-family: Arial; padding: 20px; }
@@ -224,3 +225,4 @@
   </script>
 </body>
 </html>
+
