--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h2>📍 Localização Rodoviária</h2>
-
+<img src="logo.jpg" alt="Logo da empresa" style="max-width: 200px; display: block; margin: 0 auto 20px;">
  <script>
   fetch('Relação Total - Lote 13 adaptada.csv')
     .then(response => response.text())
@@ -225,4 +225,5 @@
   </script>
 </body>
 </html>
+
 
