--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       width: 100%;
     }
   }
-
+.botao-destaque {
+  font-size: 1.2em;
+}
   </style>
 </head>
 <body>
@@ -242,6 +244,7 @@
   </script>
 </body>
 </html>
+
 
 
 
